force-app/main/default/objects/COMM_SubscriptionInvoice__c/COMM_SubscriptionInvoice__c.object-meta.xml
<CustomObject>
    <description>Represents an Invoice for a Subscription</description>
    <label>Subscription Invoice</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Subscription Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>