force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_Account__c.field-meta.xml
<CustomField>
    <fullName>COMM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated with the invoice</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Invoices</relationshipLabel>
    <relationshipName>SubscriptionInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>