force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_CardAmount__c.field-meta.xml
<CustomField>
    <fullName>COMM_CardAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount payed for the card (when requested)</description>
    <label>Card Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>