force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_CardProduct__c.field-meta.xml
<CustomField>
    <fullName>COMM_CardProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Card Product associated with the Invoice</description>
    <label>Card Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Card Product must be Category=card</errorMessage>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Card</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscription Invoices (Card)</relationshipLabel>
    <relationshipName>SubscriptionInvoicesCard</relationshipName>
    <type>Lookup</type>
</CustomField>