force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_ExemptPayment__c.field-meta.xml
<CustomField>
    <fullName>COMM_ExemptPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if invoice was exempt from Payment (depending on Account Ratio at time of processing)</description>
    <label>Exempt Payment</label>
    <type>Checkbox</type>
</CustomField>