force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_IssuanceDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_IssuanceDate__c</fullName>
    <description>Date when invoice is issued</description>
    <label>Issuance Date</label>
    <type>Date</type>
</CustomField>