force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_MonthlyFiscalDocumentControl__c.field-meta.xml
<CustomField>
    <fullName>COMM_MonthlyFiscalDocumentControl__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the monthly fiscal document control record responsible for sending invoice to SAP</description>
    <label>Monthly Fiscal Document Control</label>
    <referenceTo>COMM_MonthlyFiscalDocumentControl__c</referenceTo>
    <relationshipLabel>Subscription Invoices</relationshipLabel>
    <relationshipName>SubscriptionInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>