force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_SAPNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_SAPNumber__c</fullName>
    <description>Invoice Number used in SAP</description>
    <label>SAP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>