force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_SAPStatus__c.field-meta.xml
<CustomField>
    <fullName>COMM_SAPStatus__c</fullName>
    <description>Status of SAP Processing</description>
    <formula>IF(ISBLANK(COMM_MonthlyFiscalDocumentControl__c), &apos;Not Processed&apos;, TEXT(COMM_MonthlyFiscalDocumentControl__r.COMM_ProcessStatus__c))</formula>
    <label>SAP Status</label>
    <type>Text</type>
</CustomField>