force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_Status__c.field-meta.xml
<CustomField>
    <fullName>COMM_Status__c</fullName>
    <description>Status of the Invoice</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>