force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_SubscriptionAmount__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptionAmount__c</fullName>
    <description>Subscription Amount transferred in the invoice</description>
    <label>Subscription Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>