force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_SubscriptionAmountWithoutTax__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptionAmountWithoutTax__c</fullName>
    <description>Total Amount without applying Tax</description>
    <formula>COMM_SubscriptionAmount__c / (1 + CASE(COMM_SubscriptonProduct__r.COMM_Tax__c, &apos;Continent&apos;, $CustomMetadata.COMM_TaxValueConfiguration__mdt.Continent.COMM_TaxValue__c, &apos;Azores&apos;, $CustomMetadata.COMM_TaxValueConfiguration__mdt.Azores.COMM_TaxValue__c, &apos;Madeira&apos;, $CustomMetadata.COMM_TaxValueConfiguration__mdt.Madeira.COMM_TaxValue__c , $CustomMetadata.COMM_TaxValueConfiguration__mdt.Continent.COMM_TaxValue__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Amount without Tax</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>