force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_SubscriptionNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptionNumber__c</fullName>
    <description>Formula Field to show Subscription Number associated to invoice</description>
    <formula>COMM_Subscripton__r.COMM_SubscriptionNumber__c</formula>
    <label>Subscription Number</label>
    <type>Text</type>
</CustomField>