force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_Subscripton__c.field-meta.xml
<CustomField>
    <fullName>COMM_Subscripton__c</fullName>
    <description>The Subscription that generated the Invoice</description>
    <label>Subscripton</label>
    <referenceTo>COMM_Subscription__c</referenceTo>
    <relationshipLabel>Subscription Invoices</relationshipLabel>
    <relationshipName>SubscriptionInvoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>