force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_SubscriptonProduct__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptonProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Subscription Product associated with the Invoice</description>
    <label>Subscripton Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscription Invoices</relationshipLabel>
    <relationshipName>SubscriptionInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>