force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_SubscriptonRequest__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptonRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Request that started the Subscription</description>
    <label>Subscripton Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Subscription Invoices</relationshipLabel>
    <relationshipName>SubscriptionInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>