force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_TaxCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_TaxCode__c</fullName>
    <description>Code used in SAP to identify the tax applied on the invoice item</description>
    <formula>IF(ISPICKVAL(COMM_Account__r.BillingCountryCode, &apos;PT&apos;) || ISPICKVAL(COMM_Account__r.BillingCountryCode, &apos;&apos;),
CASE(COMM_SubscriptonProduct__r.COMM_Tax__c, &apos;Continent&apos;, &apos;PP&apos;, &apos;Madeira&apos;, &apos;PP&apos;,&apos;Azores&apos;,&apos;PP&apos;, &apos;PP&apos;),
CASE(COMM_SubscriptonProduct__r.COMM_Tax__c, &apos;Continent&apos;, &apos;PP&apos;, &apos;Madeira&apos;, &apos;PP&apos;,&apos;Azores&apos;,&apos;PP&apos;, &apos;PP&apos;))</formula>
    <label>Subscription Tax Code</label>
    <type>Text</type>
</CustomField>