force-app/main/default/objects/COMM_SubscriptionInvoice__c/fields/COMM_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>COMM_TotalAmount__c</fullName>
    <description>Total amount payed on the invoice</description>
    <formula>IF( COMM_ExemptPayment__c, 0, COMM_SubscriptionAmount__c +  COMM_CardAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>