force-app/main/default/objects/COMM_SubscriptionInvoice__c/listViews/COMM_LV_MyInvoices.listView-meta.xml
<ListView>
    <fullName>COMM_LV_MyInvoices</fullName>
    <columns>NAME</columns>
    <columns>COMM_SubscriptionNumber__c</columns>
    <columns>COMM_SubscriptonProduct__c</columns>
    <columns>COMM_IssuanceDate__c</columns>
    <columns>COMM_Status__c</columns>
    <columns>COMM_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Invoices</label>
</ListView>